[tool.poetry]
name = "experiment_data_viz"
version = "0.1.2"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.3"
streamlit = "^0.79.0"
plotly = "^4.14.3"
watchdog = "^2.1.3"
click = "^8.0.1"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
flake8 = "^3.9.2"
isort = "^5.8.0"
pytest = "^6.2.4"

[tool.poetry.scripts]
bca_analysis = "experiment_data_viz.bca_analysis:main"

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src", "tests"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
  | \.ipynb_checkpoints
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
